test_suite/alan-2022-examples/failing/006160_mutation.alan
source Da begin leave 8730 > rem 699 end
